syntax = "proto3";

package connectproto;

option go_package = "./connectproto";

// 消息服务定义
service ConnectService {
  // 推送单个消息
  rpc PushSingleMsg(PushSingleMsgRequest) returns (SuccessReply) {}
  
  // 推送房间消息
  rpc PushRoomMsg(PushRoomMsgRequest) returns (SuccessReply) {}
  
  // 推送房间信息
  rpc PushRoomInfo(PushRoomInfoRequest) returns (SuccessReply) {}
}


// 推送消息请求
message PushSingleMsgRequest {
  int32 userId = 1;
  bytes msg = 2;
}

// 推送房间消息请求
message PushRoomMsgRequest {
  int32 roomId = 1;
  bytes msg = 2;
}

// 推送房间信息请求
message PushRoomInfoRequest {
  int32 roomId = 1;
  bytes info = 2;
}

// 成功回复
message SuccessReply {
  int32 code = 1;
}